# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["HItools"]

[project]
name = "HItools"
authors = [{ name = "Tommaso Ronconi", email = "tronconi@sissa.it" }]
version = "0.0.1"
# license = { file = "LICENSE" }
dependencies = [
    'numpy',
    'scipy',
    'matplotlib>=3.6',
    'h5py'
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/TommasoRonconi/HIsimChap"
